fabric/testdata/out/ing_spp-product-search-second-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"d06ca474-7647-11e9-912e-0a13213f0924","deployment-id":"d-22bdw3hrdcuoo7xpajv9ftc9ae"},"name":"spp-product-search-second-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-second.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-second","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-product-search-second-test.zalandoapis.c [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2019-06-17T13:38:30Z"
  generation: 1
  labels:
    controller-uid: d06ca474-7647-11e9-912e-0a13213f0924
    deployment-id: d-22bdw3hrdcuoo7xpajv9ftc9ae
  name: spp-product-search-second-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-second
    uid: d06ca474-7647-11e9-912e-0a13213f0924
  resourceVersion: "1357490019"
  uid: 318f7337-9105-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: spp-product-search-second.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-second
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-product-search-second-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-second
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
